log
Fri 06 Oct 2023 03:18:08 PM UTC: 
 tests:  0|5
total_score: 0/70
cc73da8
Fri 06 Oct 2023 03:19:17 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:11: error: unused variable ‘num’ [-Werror=unused-variable]
   57 |       int num = 1;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
7c7afa3
Fri 06 Oct 2023 03:19:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5556403
Fri 06 Oct 2023 03:30:48 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:75:5: error: unused variable ‘i’ [-Werror=unused-variable]
   75 | int i=4;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
0d9ab9a
Fri 06 Oct 2023 03:30:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
40892d4
Fri 06 Oct 2023 03:39:22 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
e7fd246
Fri 06 Oct 2023 03:40:45 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:92:21: error: unused variable ‘Adyacentee’ [-Werror=unused-variable]
   92 |               Node* Adyacentee=copy(n);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8d16e24
Fri 06 Oct 2023 03:41:32 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
4d31dcc
Fri 06 Oct 2023 04:49:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:109:10: error: returning ‘int’ from a function with return type ‘Node *’ makes pointer from integer without a cast [-Werror=int-conversion]
  109 |   return 1;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
e310548
Fri 06 Oct 2023 04:49:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b4fbfb
Fri 06 Oct 2023 04:49:41 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a67efcc
Fri 06 Oct 2023 05:20:01 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
792c4b6
Fri 06 Oct 2023 05:21:02 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:7: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   76 |   int arreglo[10]={0};
      |       ^~~~~~~
sudoku.c:75:7: error: unused variable ‘i’ [-Werror=unused-variable]
   75 |   int i =4;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7da8df5
Fri 06 Oct 2023 05:25:56 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
22e31c0
Fri 06 Oct 2023 08:35:31 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:14: error: ‘i’ undeclared (first use in this function)
   77 |     int h=3*(i/3)+(j/3);
      |              ^
sudoku.c:77:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3858f55
Fri 06 Oct 2023 08:36:04 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:3: error: expected ‘,’ or ‘;’ before ‘int’
   76 |   int arreglo[10]={0};
      |   ^~~
sudoku.c:82:11: error: ‘arreglo’ undeclared (first use in this function)
   82 |       if (arreglo[matriz]==0){
      |           ^~~~~~~
sudoku.c:82:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
35b2a39
Fri 06 Oct 2023 08:36:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:75:11: error: expected expression before ‘;’ token
   75 |   int i = ;
      |           ^
Compilation failed
bb0ea45
Fri 06 Oct 2023 08:36:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5e6ff64
Fri 06 Oct 2023 08:39:26 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
0f323bf
Sat 07 Oct 2023 12:39:15 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
4cd1667
Sat 07 Oct 2023 12:39:34 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
3d15d82
Sat 07 Oct 2023 01:59:21 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:144:10: error: unused variable ‘adyacente’ [-Werror=unused-variable]
  144 |     List*adyacente=get_adj_nodes(node);
      |          ^~~~~~~~~
sudoku.c: At top level:
sudoku.c:150:3: error: expected identifier or ‘(’ before ‘return’
  150 |   return NULL;
      |   ^~~~~~
sudoku.c:151:1: error: expected identifier or ‘(’ before ‘}’ token
  151 | }
      | ^
sudoku.c: In function ‘DFS’:
sudoku.c:149:3: error: control reaches end of non-void function [-Werror=return-type]
  149 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
b7c1f3f
Sat 07 Oct 2023 02:02:43 AM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
8916cf9
Sat 07 Oct 2023 02:18:57 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|1
total_score: 60/70
fb2f5ad
